show email address and no. of items to order at the fulfilment queue screen